fix: sonar